# t-route

./: .dockerignore  .gitignore  .pre-commit-config.yaml  3,!=3.0.4  LICENSE  check_numpy_py314.py  compiler.sh  compiler_bmi.sh  compiler_mac.sh  compiler_uv.sh  pyproject.toml  requirements.txt  version.txt
src/troute-bmi/: pyproject.toml  requirements.txt
src/troute-bmi/src/troute_nwm_bmi/: troute_bmi.py  troute_model.py
src/troute-rnr/: README.md  iac.py  main.py  post_process.py  pyproject.toml  settings.ini
src/troute-rnr/base_files/: base_config.yaml  tmp_domain.gpkg
src/troute-rnr/src/troute_rnr/: __init__.py  consumer.py  format.py  gpkg.py  logging.py  read.py  replace_and_route.py  settings.py  utils.py  write.py
src/troute-rnr/src/troute_rnr/base_files/: base_config.yaml
src/troute-rnr/src/troute_rnr/schemas/: nwps.py  weather.py
src/troute-rnr/test/: README.md  conftest.py  test_format.py
src/troute-rnr/test/examples/: troute_output_202505060600.nc  view_outputs.ipynb
src/troute-rnr/test/mock_data/: HPDT2.gpkg  HPDT2.json  HPDT2_2025-05-05_21:00.pkl  HPDT2_config.yaml
src/troute-rnr/test/mock_data/flows/: HPDT2.CHRTOUT_DOMAIN1.csv
src/troute-rnr/test/mock_data/flows/HPDT2/: 202505060000.CHRTOUT_DOMAIN1.csv  202505060300.CHRTOUT_DOMAIN1.csv  202505060600.CHRTOUT_DOMAIN1.csv  202505060900.CHRTOUT_DOMAIN1.csv  202505061200.CHRTOUT_DOMAIN1.csv  202505061500.CHRTOUT_DOMAIN1.csv  202505061800.CHRTOUT_DOMAIN1.csv  202505062100.CHRTOUT_DOMAIN1.csv  202505070000.CHRTOUT_DOMAIN1.csv  202505070300.CHRTOUT_DOMAIN1.csv  202505070600.CHRTOUT_DOMAIN1.csv  202505070900.CHRTOUT_DOMAIN1.csv  202505071200.CHRTOUT_DOMAIN1.csv  202505071500.CHRTOUT_DOMAIN1.csv  202505071800.CHRTOUT_DOMAIN1.csv  202505072100.CHRTOUT_DOMAIN1.csv  202505080000.CHRTOUT_DOMAIN1.csv  202505080300.CHRTOUT_DOMAIN1.csv  202505080600.CHRTOUT_DOMAIN1.csv  202505080900.CHRTOUT_DOMAIN1.csv  202505081200.CHRTOUT_DOMAIN1.csv  (+18 more)
(+2576 files in other folders)
