[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "troute.nwm_bmi"
authors = [
    { name = "Ian Todd", email = "itodd@dewberry.com" }
]
version = "0.0.0"
requires-python = ">=3.6"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
