[project]
name = "troute_rnr"
authors = [{ name = "Tadd Bindas", email = "Tadd.Bindas@rtx.com" }]
dependencies = [
    "pydantic-settings==2.3.4",
    "xarray==2024.3.0",
    "numpy==1.26.3",
    "matplotlib==3.9.0",
    "pandas==2.0.2",
    "pika==1.3.2",
]
description = "T-Route replace and route capabilities for water.noaa.gov"
version = "0.2.0"
readme = "README.md"
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/troute_rnr"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
